--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Permanent Marker', cursive;
   background: white;
-  color: #393d3f;
+  color: black;
   margin: 0;
 }
 
@@ -18,8 +18,9 @@ header div {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -29,24 +30,62 @@ header div {
       flex-wrap: nowrap;
 }
 
+header div div div {
+  -webkit-transition: all 0.8s ease-in-out;
+  transition: all 0.8s ease-in-out;
+}
+
 header div div div:hover {
   color: white;
   -webkit-transform: rotateY(360deg);
           transform: rotateY(360deg);
-  -webkit-transition: all 1s ease-in-out;
-  transition: all 1s ease-in-out;
 }
 
 header .logo {
-  font-size: 22px;
-  padding: 0px 20px;
+  font-size: 20px;
+  padding: 0px 10px;
 }
 
 .nave div {
-  margin: 10px;
+  margin: 5px;
 }
 
 .nave div * {
   padding: 5px;
+}
+
+@media all and (max-width: 768px) {
+  .nave a {
+    display: none;
+  }
+}
+
+a:link {
+  color: black;
+  text-decoration: none;
+}
+
+a:visited {
+  color: black;
+}
+
+.night-club {
+  width: 500px;
+  height: 500px;
+  background-color: gray;
+}
+
+.night-light {
+  margin: auto;
+  width: 200px;
+  height: 200px;
+  background-color: white;
+}
+
+.night-people {
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  background-color: blue;
 }
 /*# sourceMappingURL=main.css.map */
