--- a/css/main.sass
+++ b/css/main.sass
@@ -1,7 +1,7 @@
 body
     font-family: 'Permanent Marker', cursive
     background : white
-    color : #393d3f
+    color : black
     margin: 0
 header
     background: #6C6C6C
@@ -9,22 +9,46 @@ header
     div
         display: flex
         flex-direction: row
-        justify-content: space-around
+        justify-content: space-between
         align-items: center
         align-self: baseline
         flex-wrap: nowrap
         div
             div
+                transition: all 0.8s ease-in-out
                 &:hover
                     color: white
                     transform: rotateY(360deg)
-                    transition: all 1s ease-in-out
     .logo
-        font-size: 22px
-        padding: 0px 20px
+        font-size: 20px
+        padding: 0px 10px
 .nave
     div
-        margin: 10px
+        margin: 5px
         *
             padding: 5px
-        
+    a
+        @media all and (max-width: 768px)
+            display: none
+a
+    &:link
+        color: black
+        text-decoration: none
+    &:visited
+        color: black
+.parallax-content
+    div
+.night-club
+    width: 500px
+    height: 500px
+    background-color: gray
+.night-light
+    margin: auto
+    width: 200px
+    height: 200px
+    background-color: white
+.night-people
+    margin: auto
+    width: 100px
+    height: 100px
+    background-color: blue
